Algorithm released. MPI connected to project

--- a/1608/blintsov_sd/CMakeLists.txt
+++ b/1608/blintsov_sd/CMakeLists.txt
@@ -2,5 +2,10 @@ cmake_minimum_required(VERSION 3.10)
 project(blintsov_sd)
 
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_COMPILER "/Users/sblincov/opt/usr/local/bin/mpicxx")
+find_package ( MPI )
+if ( MPI_FOUND )
+    include_directories( ${MPI_INCLUDE_PATH} )
+endif( MPI_FOUND )
 
 add_executable(blintsov_sd main.cpp)
